--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
     "@cliqz/adblocker-electron": "^1.23.8",
     "cross-fetch": "^3.1.5"
   },
-  "name": "dicblock",
+  "name": "Discord-Adblock",
   "version": "1.0.0",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yatsukiko/dicblock.git"
+    "url": "git+https://github.com/yatsukiko/Discord-Adblock.git"
   },
   "keywords": [],
   "author": "",
   "license": "MPL-2.0",
   "bugs": {
-    "url": "https://github.com/yatsukiko/dicblock/issues"
+    "url": "https://github.com/yatsukiko/Discord-Adblock/issues"
   },
-  "homepage": "https://github.com/yatsukiko/dicblock#readme",
+  "homepage": "https://github.com/yatsukiko/Discord-Adblock#readme",
   "description": ""
 }
